samples/_failures_safe/1761074450_13a864_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4954cc20.c: In function ‘main’:
./samples/SAFE/__tmp_4954cc20.c:162:5: error: expected expression at end of input
  162 |     size_t len =
      |     ^~~~~~
./samples/SAFE/__tmp_4954cc20.c:162:5: error: expected declaration or statement at end of input
